--- a/src/app/components/count-complete-cards/count-complete-cards.component.html
+++ b/src/app/components/count-complete-cards/count-complete-cards.component.html
@@ -1,5 +1,7 @@
 <div class="container" style="margin-top: 30px">
-  <h3 style="text-align: center;">Number of complete decks</h3>
+  <h3 style="text-align: center; margin-bottom: 30px">
+    Number of complete decks
+  </h3>
   <div class="card" style="width: 18rem">
     <img
       src="https://www.nhfournier.es/wp-content/uploads/2017/10/brisca-baraja-cartas.jpg"
