--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
 <app-navbar></app-navbar>
-<!-- <app-create-user></app-create-user> -->
-<app-count-complete-cards></app-count-complete-cards>
+<router-outlet></router-outlet>
