--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -15,7 +15,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">User Form</a>
+        <a class="nav-link" routerLink="user-form" routerLinkActive
+          >User Form</a
+        >
       </li>
       <li class="nav-item dropdown">
         <a
@@ -30,7 +32,7 @@
           Complete Deck Cards
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Solution 1</a>
+          <a class="dropdown-item" routerLink="complete-cards">Solution 1</a>
           <a class="dropdown-item" href="#">Solution 2</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
