--- a/src/app/components/create-user/create-user.component.html
+++ b/src/app/components/create-user/create-user.component.html
@@ -26,7 +26,7 @@
         <input
           type="text"
           class="form-control"
-          id="exampleInputLastName"
+          id="exampleInputAge"
           aria-describedby="emailHelp"
           [formControl]="form.controls['age']"
         />
@@ -36,7 +36,7 @@
         <input
           type="text"
           class="form-control"
-          id="exampleInputLastName"
+          id="exampleInputAddress"
           aria-describedby="emailHelp"
           [formControl]="form.controls['address']"
         />
@@ -57,6 +57,7 @@
         class="btn btn-primary"
         (click)="onCreate()"
         [disabled]="form.invalid"
+        id="createUserButton"
       >
         Submit
       </button>
