--- a/src/app/components/create-user/create-user.component.html
+++ b/src/app/components/create-user/create-user.component.html
@@ -1,67 +1,65 @@
-<div class="container" style="margin-top: 30px">
-  <div class="row">
-    <form [formGroup]="form" class="col-12 col-md-4">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Name</label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleInputName"
-          aria-describedby="emailHelp"
-          [formControl]="form.controls['name']"
-        />
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Last Name</label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleInputLastName"
-          aria-describedby="emailHelp"
-          [formControl]="form.controls['lastName']"
-        />
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Age</label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleInputAge"
-          aria-describedby="emailHelp"
-          [formControl]="form.controls['age']"
-        />
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Address</label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleInputAddress"
-          aria-describedby="emailHelp"
-          [formControl]="form.controls['address']"
-        />
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-          [formControl]="form.controls['email']"
-        />
-      </div>
+<div style="margin-bottom: 30px">
+  <h4>Add user</h4>
+  <form [formGroup]="form">
+    <div class="form-group">
+      <label for="exampleInputEmail1">Name</label>
+      <input
+        type="text"
+        class="form-control"
+        id="exampleInputName"
+        aria-describedby="emailHelp"
+        [formControl]="form.controls['name']"
+      />
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Last Name</label>
+      <input
+        type="text"
+        class="form-control"
+        id="exampleInputLastName"
+        aria-describedby="emailHelp"
+        [formControl]="form.controls['lastName']"
+      />
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Age</label>
+      <input
+        type="text"
+        class="form-control"
+        id="exampleInputAge"
+        aria-describedby="emailHelp"
+        [formControl]="form.controls['age']"
+      />
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Address</label>
+      <input
+        type="text"
+        class="form-control"
+        id="exampleInputAddress"
+        aria-describedby="emailHelp"
+        [formControl]="form.controls['address']"
+      />
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input
+        type="email"
+        class="form-control"
+        id="exampleInputEmail1"
+        aria-describedby="emailHelp"
+        [formControl]="form.controls['email']"
+      />
+    </div>
 
-      <button
-        type="submit"
-        class="btn btn-primary"
-        (click)="onCreate()"
-        [disabled]="form.invalid"
-        id="createUserButton"
-      >
-        Submit
-      </button>
-    </form>
-    <div class="col col-md-8"></div>
-  </div>
+    <button
+      type="submit"
+      class="btn btn-primary"
+      (click)="onCreate()"
+      [disabled]="form.invalid"
+      id="createUserButton"
+    >
+      Submit
+    </button>
+  </form>
 </div>
