--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -15,9 +15,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="user-form" routerLinkActive
-          >User Form</a
-        >
+        <a class="nav-link" routerLink="user" routerLinkActive>User Form</a>
       </li>
       <li class="nav-item dropdown">
         <a
