--- a/src/app/components/create-user/create-user.component.html
+++ b/src/app/components/create-user/create-user.component.html
@@ -1,65 +1,68 @@
-<div style="margin-bottom: 30px">
-  <h4>Add user</h4>
-  <form [formGroup]="form">
-    <div class="form-group">
-      <label for="exampleInputEmail1">Name</label>
-      <input
-        type="text"
-        class="form-control"
-        id="exampleInputName"
-        aria-describedby="emailHelp"
-        [formControl]="form.controls['name']"
-      />
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Last Name</label>
-      <input
-        type="text"
-        class="form-control"
-        id="exampleInputLastName"
-        aria-describedby="emailHelp"
-        [formControl]="form.controls['lastName']"
-      />
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Age</label>
-      <input
-        type="text"
-        class="form-control"
-        id="exampleInputAge"
-        aria-describedby="emailHelp"
-        [formControl]="form.controls['age']"
-      />
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Address</label>
-      <input
-        type="text"
-        class="form-control"
-        id="exampleInputAddress"
-        aria-describedby="emailHelp"
-        [formControl]="form.controls['address']"
-      />
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input
-        type="email"
-        class="form-control"
-        id="exampleInputEmail1"
-        aria-describedby="emailHelp"
-        [formControl]="form.controls['email']"
-      />
-    </div>
+<div class="container">
+  <div class="col-12 col-md-4" style="margin-bottom: 30px">
+    <h4>Add user</h4>
+    <form [formGroup]="form">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="exampleInputName"
+          aria-describedby="emailHelp"
+          [formControl]="form.controls['name']"
+        />
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Last Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="exampleInputLastName"
+          aria-describedby="emailHelp"
+          [formControl]="form.controls['lastName']"
+        />
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Age</label>
+        <input
+          type="text"
+          class="form-control"
+          id="exampleInputAge"
+          aria-describedby="emailHelp"
+          [formControl]="form.controls['age']"
+        />
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Address</label>
+        <input
+          type="text"
+          class="form-control"
+          id="exampleInputAddress"
+          aria-describedby="emailHelp"
+          [formControl]="form.controls['address']"
+        />
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+          [formControl]="form.controls['email']"
+        />
+      </div>
 
-    <button
-      type="submit"
-      class="btn btn-primary"
-      (click)="onCreate()"
-      [disabled]="form.invalid"
-      id="createUserButton"
-    >
-      Submit
-    </button>
-  </form>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        (click)="onCreate()"
+        [disabled]="form.invalid"
+        id="createUserButton"
+      >
+        Submit
+      </button>
+    </form>
+  </div>
+  <div class="col-12 col-md-8"></div>
 </div>
