--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,16 +1,23 @@
-<h4>Users</h4>
-<div class="list-group">
-  <button
-    *ngFor="let user of users"
-    type="button"
-    class="list-group-item list-group-item-action"
-    (click)="onShowUserDetail(user)"
-  >
-    {{ user.name + " " + user.lastName }}
-  </button>
-</div>
-<div *ngIf="isLoading" class="d-flex justify-content-center">
-  <div class="spinner-border" role="status">
-    <span class="sr-only">Loading...</span>
+<div class="container" style="margin-top: 30px">
+  <div class="row">
+    <div class="col col-md-4">
+      <h4>Users</h4>
+      <div class="list-group">
+        <button
+          *ngFor="let user of users"
+          type="button"
+          class="list-group-item list-group-item-action"
+          (click)="onShowUserDetail(user)"
+        >
+          {{ user.name + " " + user.lastName }}
+        </button>
+      </div>
+    </div>
+    <div class="col col-md-8"></div>
+  </div>
+  <div *ngIf="isLoading" class="d-flex justify-content-center">
+    <div class="spinner-border" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
   </div>
 </div>
