--- a/src/app/components/create-user/create-user.component.html
+++ b/src/app/components/create-user/create-user.component.html
@@ -65,4 +65,31 @@
     </form>
   </div>
   <div class="col-12 col-md-8"></div>
+
+  <div
+    aria-live="polite"
+    aria-atomic="true"
+    style="position: relative; min-height: 200px"
+  >
+    <div
+      class="toast"
+      role="alert"
+      aria-live="assertive"
+      aria-atomic="true"
+      style="position: absolute; top: 0; right: 0"
+    >
+      <div class="toast-header">
+        <strong class="mr-auto">{{ toastMessageHead }}</strong>
+        <button
+          type="button"
+          class="ml-2 mb-1 close"
+          data-dismiss="toast"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="toast-body">{{ toastMessageBody }}</div>
+    </div>
+  </div>
 </div>
