--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 30px">
+<div *ngIf="user" class="container" style="margin-top: 30px">
   <label>Name:</label>
   <p>{{ user.name }}</p>
   <hr />
@@ -11,7 +11,7 @@
   <label>Address:</label>
   <p>{{ user.address }}</p>
   <hr />
-  <hr>
+  <hr />
   <label>Email:</label>
   <p>{{ user.email }}</p>
 </div>
