--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -1,17 +1,20 @@
 <div *ngIf="user" class="container" style="margin-top: 30px">
-  <label>Name:</label>
-  <p>{{ user.name }}</p>
-  <hr />
-  <label>Last Name:</label>
-  <p>{{ user.lastName }}</p>
-  <hr />
-  <label>Age:</label>
-  <p>{{ user.age }}</p>
-  <hr />
-  <label>Address:</label>
-  <p>{{ user.address }}</p>
-  <hr />
-  <hr />
-  <label>Email:</label>
-  <p>{{ user.email }}</p>
+  <div *ngIf="isLoading" class="loader"></div>
+  <div *ngIf="!isLoading">
+    <label>Name:</label>
+    <p>{{ user.name }}</p>
+    <hr />
+    <label>Last Name:</label>
+    <p>{{ user.lastName }}</p>
+    <hr />
+    <label>Age:</label>
+    <p>{{ user.age }}</p>
+    <hr />
+    <label>Address:</label>
+    <p>{{ user.address }}</p>
+    <hr />
+    <hr />
+    <label>Email:</label>
+    <p>{{ user.email }}</p>
+  </div>
 </div>
