--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -15,9 +15,5 @@
     </div>
     <div class="col col-md-8"></div>
   </div>
-  <div *ngIf="isLoading" class="d-flex justify-content-center">
-    <div class="spinner-border" role="status">
-      <span class="sr-only">Loading...</span>
-    </div>
-  </div>
+  <div *ngIf="isLoading" class="loader"></div>
 </div>
