--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top: 30px">
   <div class="row">
-    <div class="col col-md-4">
+    <div class="col-12 col-md-4">
       <h4>Users</h4>
       <div class="list-group">
         <button
