--- a/src/app/components/create-user/create-user.component.html
+++ b/src/app/components/create-user/create-user.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="col-12 col-md-4" style="margin-bottom: 30px">
+<div class="container" style="margin-bottom: 30px; margin-top: 30px">
+  <div class="col-12 col-md-4">
     <h4>Add user</h4>
     <form [formGroup]="form">
       <div class="form-group">
