--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -1,4 +1,5 @@
 <div class="container" style="margin-top: 30px">
+  <h4>User detail</h4>
   <div *ngIf="isLoading" class="loader"></div>
   <div *ngIf="user && !isLoading">
     <label>Name:</label>
@@ -13,8 +14,10 @@
     <label>Address:</label>
     <p>{{ user.address }}</p>
     <hr />
-    <hr />
     <label>Email:</label>
     <p>{{ user.email }}</p>
+  </div>
+  <div *ngIf="showErrorMessage" class="alert alert-danger" role="alert">
+    {{ errorMessage }}
   </div>
 </div>
