--- a/src/app/components/create-user/create-user.component.css
+++ b/src/app/components/create-user/create-user.component.css
@@ -1,4 +1,9 @@
-.toast-header {
+.toast-header-success {
   background-color: #d4edda;
   color: #155724;
+}
+
+.toast-header-error {
+  background-color: #f8d7da;
+  color: #721c24;
 }
