--- a/src/app/components/create-user/create-user.component.html
+++ b/src/app/components/create-user/create-user.component.html
@@ -10,7 +10,19 @@
           id="exampleInputName"
           aria-describedby="emailHelp"
           [formControl]="form.controls['name']"
+          required
         />
+        <!-- <div *ngIf="form.controls['name'].invalid" class="invalid-feedback">
+          Name is required
+        </div> -->
+        <div *ngIf="form.controls['name'].invalid" class="invalid-input">
+          <div *ngIf="form.controls['name'].errors.required">
+            Name is required.
+          </div>
+          <div *ngIf="form.controls['name'].errors.minlength">
+            Name must have at least 3 characters.
+          </div>
+        </div>
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1">Last Name</label>
@@ -51,6 +63,12 @@
           aria-describedby="emailHelp"
           [formControl]="form.controls['email']"
         />
+        <div
+          *ngIf="form.controls['email'].hasError('email')"
+          class="invalid-feedback"
+        >
+          Invalid email
+        </div>
       </div>
 
       <button
@@ -80,7 +98,10 @@
     >
       <div
         class="toast-header"
-        [ngClass]="{ 'toast-header-success': !isError, 'toast-header-error': isError }"
+        [ngClass]="{
+          'toast-header-success': !isError,
+          'toast-header-error': isError
+        }"
       >
         <strong class="mr-auto">{{ toastMessageHead }}</strong>
         <button
