working in counter of complete decks

--- a/src/app/components/count-complete-cards/count-complete-cards.component.css
+++ b/src/app/components/count-complete-cards/count-complete-cards.component.css
@@ -1,8 +1,14 @@
 .card {
   margin-left: auto;
   margin-right: auto;
+
+  cursor: pointer;
 }
 
 .card-title {
   text-align: center;
+}
+
+.card-list-button {
+  cursor: pointer;
 }
