--- a/src/app/components/count-complete-cards/count-complete-cards.component.html
+++ b/src/app/components/count-complete-cards/count-complete-cards.component.html
@@ -9,7 +9,59 @@
       alt="cards"
     />
     <div class="card-body">
-      <h5 class="card-title">{{ numberOfCompleteDecks }}</h5>
+      <h5 *ngIf="!showMessageForCalculate" class="card-title">
+        {{ numberOfCompleteDecks }}
+      </h5>
+
+      <button
+        type="button"
+        class="btn btn-primary"
+        (click)="countCompleteDecks()"
+        id="cardCounterButton"
+        *ngIf="showMessageForCalculate"
+        style="width: 100%"
+      >
+        Click to calculate
+      </button>
     </div>
+  </div>
+
+  <div class="table-responsive" style="margin-top: 30px">
+    <h4 style="text-align: center">Cards distribution</h4>
+    <table
+      class="table table-striped table-bordered table-hover table-condensed"
+    >
+      <thead>
+        <tr>
+          <th>#</th>
+          <th *ngFor="let itemValue of value">{{ itemValue }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let suitItem of suit; let i = index">
+          <td>{{ suitItem }}</td>
+          <td *ngFor="let cardCounterItem of cardCounter[i]">
+            {{ cardCounterItem }}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="btn-group" id="cardsListButton">
+  <button
+    type="button"
+    class="btn btn-primary dropdown-toggle"
+    data-toggle="dropdown"
+    aria-haspopup="true"
+    aria-expanded="false"
+  >
+    Cards list
+  </button>
+  <div class="dropdown-menu">
+    <a class="dropdown-item card-list-button" (click)="cardList1()">List 1</a>
+    <a class="dropdown-item card-list-button" (click)="cardList2()">List 2</a>
+    <a class="dropdown-item card-list-button" (click)="cardList3()">List 3</a>
   </div>
 </div>
